[gd_scene load_steps=23 format=3 uid="uid://bamaniiy4imgc"]

[ext_resource type="Script" path="res://Game/3UI/Shop_Menu/Script/shop_buyer_menu.gd" id="1_ikfht"]
[ext_resource type="Texture2D" uid="uid://c24jhylg6ft1v" path="res://Game/3UI/Shop_Menu/Texture/ShopMenu_bar.png" id="1_iohj1"]
[ext_resource type="Texture2D" uid="uid://bo4td0gv35x14" path="res://Game/3UI/Shop_Menu/Texture/ShopMenuBuyer_background.png" id="2_1cgte"]
[ext_resource type="Texture2D" uid="uid://e66jq04okpm4" path="res://Game/3UI/Inventory/Texture/Button_disa.png" id="4_glkfi"]
[ext_resource type="Texture2D" uid="uid://6cu5o7bilnbk" path="res://Game/3UI/PauseMenu/Texture/Button.png" id="5_hs5us"]
[ext_resource type="Texture2D" uid="uid://d8gjq4o1acm4" path="res://Game/3UI/PauseMenu/Texture/Button_selected.png" id="6_bdtsu"]
[ext_resource type="PackedScene" uid="uid://clpd1wepmaltg" path="res://Game/3UI/Shop_Menu/Objects/hoe_2.tscn" id="7_kplvr"]
[ext_resource type="PackedScene" uid="uid://dslqwkw2s6b1q" path="res://Game/3UI/Shop_Menu/Objects/bucket_2.tscn" id="8_5ryxm"]
[ext_resource type="PackedScene" uid="uid://dbdht8y8lunlw" path="res://Game/3UI/Shop_Menu/Objects/bucket_3.tscn" id="9_kdhef"]
[ext_resource type="PackedScene" uid="uid://cv5gi1odm70or" path="res://Game/3UI/Shop_Menu/Objects/house.tscn" id="10_6lhdv"]
[ext_resource type="Texture2D" uid="uid://bwlypcr52a77i" path="res://Game/3UI/Inventory/Texture/Coin-sheet.png" id="11_q8f4u"]

[sub_resource type="Animation" id="Animation_qu40i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(276, 700)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(583, 360)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(367, 163)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("X:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hoe2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Bucket2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Bucket3:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("House:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("RigidBody2D:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Bucket4:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Bucket5:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("House2:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Coin:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Coin2:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Coin3:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Coin4:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rcp83"]
resource_name = "back"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(583, 360), Vector2(67, 360)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(367, 163), Vector2(325, 160)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Bar:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(276, 123), Vector2(276, 700)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.766667, 0.9),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"is_dialog"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("X:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hoe2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Bucket2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Bucket3:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("House:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("RigidBody2D:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Bucket4:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Bucket5:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("House2:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Coin:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Coin2:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Coin3:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Coin4:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/18/type = "method"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath(".")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"invs"
}]
}

[sub_resource type="Animation" id="Animation_3cnku"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(276, 700), Vector2(276, 123)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.433333, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(67, 360), Vector2(583, 360)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(367, 163)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("X:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.766667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Coin4:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Coin3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Coin2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Coin:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("House2:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Bucket5:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Bucket4:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("RigidBody2D:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("House:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Bucket3:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Bucket2:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Hoe2:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/17/type = "method"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath(".")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0.733333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"invs"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_58oad"]
_data = {
"RESET": SubResource("Animation_qu40i"),
"back": SubResource("Animation_rcp83"),
"start": SubResource("Animation_3cnku")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4ko0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwb6r"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kkist"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ul2k"]
texture = ExtResource("4_glkfi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6ri8w"]
texture = ExtResource("5_hs5us")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_epeoc"]
texture = ExtResource("6_bdtsu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xwhn0"]
texture = ExtResource("5_hs5us")

[node name="ShopBuyer_menu" type="CanvasLayer"]
script = ExtResource("1_ikfht")

[node name="Bar" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 276.0
offset_top = 123.0
offset_right = 428.0
offset_bottom = 574.0
texture = ExtResource("1_iohj1")

[node name="Background" type="TextureRect" parent="."]
visible = false
z_index = -1
texture_filter = 1
offset_left = 367.0
offset_top = 163.0
offset_right = 950.0
offset_bottom = 523.0
texture = ExtResource("2_1cgte")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_58oad")
}
autoplay = "start"

[node name="X" type="Button" parent="."]
offset_left = 886.0
offset_top = 185.0
offset_right = 917.0
offset_bottom = 234.0
focus_mode = 0
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxFlat_r4ko0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uwb6r")
theme_override_styles/normal = SubResource("StyleBoxFlat_kkist")
text = "X"

[node name="Hoe2" type="Button" parent="."]
texture_filter = 1
offset_left = 394.0
offset_top = 286.0
offset_right = 579.0
offset_bottom = 344.0
focus_mode = 0
theme_override_font_sizes/font_size = 15
theme_override_styles/disabled = SubResource("StyleBoxTexture_4ul2k")
theme_override_styles/hover = SubResource("StyleBoxTexture_6ri8w")
theme_override_styles/pressed = SubResource("StyleBoxTexture_epeoc")
theme_override_styles/normal = SubResource("StyleBoxTexture_xwhn0")
text = "Buy for 400
Lvl 1 Hoe"
icon_alignment = 2
expand_icon = true

[node name="Bucket2" type="Button" parent="."]
texture_filter = 1
offset_left = 675.0
offset_top = 286.0
offset_right = 860.0
offset_bottom = 344.0
focus_mode = 0
theme_override_font_sizes/font_size = 15
theme_override_styles/disabled = SubResource("StyleBoxTexture_4ul2k")
theme_override_styles/hover = SubResource("StyleBoxTexture_6ri8w")
theme_override_styles/pressed = SubResource("StyleBoxTexture_epeoc")
theme_override_styles/normal = SubResource("StyleBoxTexture_xwhn0")
text = "BUY for 200
Lvl 2 Bucket
"

[node name="Bucket3" type="Button" parent="."]
texture_filter = 1
offset_left = 395.0
offset_top = 450.0
offset_right = 580.0
offset_bottom = 508.0
focus_mode = 0
theme_override_font_sizes/font_size = 15
theme_override_styles/disabled = SubResource("StyleBoxTexture_4ul2k")
theme_override_styles/hover = SubResource("StyleBoxTexture_6ri8w")
theme_override_styles/pressed = SubResource("StyleBoxTexture_epeoc")
theme_override_styles/normal = SubResource("StyleBoxTexture_xwhn0")
text = "BUY for 700
Lvl 3 Bucket"

[node name="House" type="Button" parent="."]
texture_filter = 1
offset_left = 676.0
offset_top = 450.0
offset_right = 861.0
offset_bottom = 508.0
focus_mode = 0
theme_override_font_sizes/font_size = 15
theme_override_styles/disabled = SubResource("StyleBoxTexture_4ul2k")
theme_override_styles/hover = SubResource("StyleBoxTexture_6ri8w")
theme_override_styles/pressed = SubResource("StyleBoxTexture_epeoc")
theme_override_styles/normal = SubResource("StyleBoxTexture_xwhn0")
text = "BUY for 1500
New House"

[node name="RigidBody2D" parent="." instance=ExtResource("7_kplvr")]
position = Vector2(217, 22)

[node name="Bucket4" parent="." instance=ExtResource("8_5ryxm")]
position = Vector2(741, 207)

[node name="Bucket5" parent="." instance=ExtResource("9_kdhef")]
position = Vector2(451, 375)

[node name="House2" parent="." instance=ExtResource("10_6lhdv")]
position = Vector2(717, 353)

[node name="Coin" type="TextureRect" parent="."]
offset_left = 582.0
offset_top = 298.0
offset_right = 622.0
offset_bottom = 338.0
texture = ExtResource("11_q8f4u")

[node name="Coin2" type="TextureRect" parent="."]
offset_left = 862.0
offset_top = 298.0
offset_right = 902.0
offset_bottom = 338.0
texture = ExtResource("11_q8f4u")

[node name="Coin3" type="TextureRect" parent="."]
offset_left = 583.0
offset_top = 464.0
offset_right = 623.0
offset_bottom = 504.0
texture = ExtResource("11_q8f4u")

[node name="Coin4" type="TextureRect" parent="."]
offset_left = 860.0
offset_top = 460.0
offset_right = 900.0
offset_bottom = 500.0
texture = ExtResource("11_q8f4u")

[connection signal="pressed" from="X" to="." method="_on_x_pressed"]
[connection signal="pressed" from="Hoe2" to="RigidBody2D" method="_on_hoe_2_pressed"]
[connection signal="pressed" from="Bucket2" to="Bucket4" method="_on_bucket_2_pressed"]
[connection signal="pressed" from="Bucket3" to="Bucket5" method="_on_bucket_3_pressed"]
[connection signal="pressed" from="House" to="House2" method="_on_house_pressed"]
